proyecto-final/public-api/public-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: public-api-deploy
  namespace: public
  labels:
    app: public-api

spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-api

  template:
    metadata:
      labels:
        app: public-api
    spec:
      containers:
        - name: public-api
          image: cachac/kubelabs_public_api:1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5

          volumeMounts:
            - name: logs-volume
              mountPath: /app/logs
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: public-api-pvc
