proyecto-final/public-api/public-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api-svc
  namespace: public
spec:
  ports:
    - targetPort: 3000 # POD port
      port: 80 # service port
  selector: # POD labels
    app: public-api
