proyecto-final/public-api/public-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-api-ingress
  namespace: public
spec:
  rules:
    - host: api.josue.kubelabs.dev
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: public-api-svc
                port:
                  number: 80
